<?xml version="1.0" encoding="utf-8"?>

<resources>

<string name="app_name">StudyMate</string>
<string name="action_settings">Impostazioni</string>
<string-array name="options_array">
    <item>Mese</item>
    <item>Settimana</item>
    <item>Oggi</item>
    <item>Impostazioni</item>

</string-array>

    <string-array name="tipoEvento">
        <item>Altro</item>
        <item>Esame</item>

    </string-array>


<string name="event_priority">Imposta la priorità dell\'evento:</string>
<string name="drawer_open">Open navigation drawer</string>
<string name="drawer_close">Close navigation drawer</string>
<string name="info_add_button">Bottone aggiunta evento</string>

<string name="form_intro">Aggiunta evento</string>
<string name="name">Inserisci un nome per l\'evento</string>
<string name="date">Data:</string>
<string name="date_start">inizio:</string>
<string name="date_end">fine:</string>
<string name="form_end_button_label">Fine</string>
<string name="form_back_button_label">Annulla</string>
    <string name="textNewEventButton">Nuovo Evento</string>
<string name="label_form_name">Nome Inserito:</string>
<string name="label_form_date">Data Inserita:</string>
<string name="event_type">Inserisci tipo evento:</string>
<string name="add_date_title">Aggiunta evento</string>
<string name="exam_weight">Inserisci i crediti dell\'esame:</string>
<string name="hintTitleEvent">Inserisci un nome per l\'evento:</string>
<string name="hintDate">gg-mm-aaaa</string>
<string name="hintHour">hh:mm</string>
<string name="hintCfu">Crediti</string>
<string name="hintMonthView">Seleziona una data dal calendario</string>
<string name="labelButtonViewScheduling">Nascondi gli eventi suggeriti</string>


</resources>